2005-02-19  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/thread-internal.h,
	kaffe/kaffevm/systems/unix-pthreads/thread-impl.c (jthread_current): 
	Deinlined.

2005-02-19  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-19  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JToggleButton.java: Removed empty line.
	
2005-02-19  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-18  Bryce McKinlay  <mckinlay@redhat.com>

	* java/util/LinkedHashMap (addEntry): Call remove() with key argument, 
	not the HashEntry. Reported by Jean-Marie White.
	
2005-02-19  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-18  Sven de Marothy <sven@physto.se>

	* java/util/TimeZone.java,
	(getDefaultDisplayName): Fix previous fix.
	
2005-02-19  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-18  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/font/TransformAttribute.java,
	(TransformAttribute(AffineTransform)): throw 
	IllegalArgumentException for null transform.
	(getTransform): return a copy of transform.
	Added doc comments to all.
	
2005-02-19  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-18  Sven de Marothy <sven@physto.se>

	* java/util/TimeZone.java,
	(getDefaultDisplayName): Don't print zero offsets.
	
2005-02-19  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-18  Robert Schuster <thebohemian@gmx.net>

	* java/nio/charset/Charset.java (forName): Throws
	IllegalArgumentException when argument is null
	and added documentation.
	
2005-02-19  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-17  Mark Wielaard  <mark@klomp.org>

	* java/util/SimpleTimeZone.java (checkRule): Throw
	IllegalArgumentException when month out of range.
	
2005-02-19  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	