@@ -113,30 +113,21 @@ void jthread_sleep (jlong timeout);
  *
  * Needed to avoid stopping a thread while it holds a lock.
  */
-static inline
-void jthread_disable_stop(void)
-{
-}
+void jthread_disable_stop(void);
 
 /**
  * Enable stopping the calling thread.
  *
  * Needed to avoid stopping a thread while it holds a lock.
  */
-static inline
-void jthread_enable_stop(void)
-{
-}
+void jthread_enable_stop(void);
 
 /** 
  * Stop a thread.
  * 
  * @param tid the thread to stop.
  */
-static inline
-void jthread_stop(UNUSED jthread_t tid)
-{
-}
+void jthread_stop(UNUSED jthread_t tid);
 
 /**
  * Interrupt a thread.
@@ -157,10 +148,7 @@ void jthread_atexit(void (* func)(void));
  *
  * @param tid the thread whose info is to be dumped.
  */
-static inline
-void jthread_dumpthreadinfo(UNUSED jthread_t tid)
-{
-}
+void jthread_dumpthreadinfo(UNUSED jthread_t tid);
 
 /**
  * Return the java.lang.Thread instance attached to a thread
@@ -169,11 +157,7 @@ void jthread_dumpthreadinfo(UNUSED jthread_t tid)
  *            is to be returned.
  * @return the java.lang.Thread instance.
  */
-static inline
-threadData *jthread_get_data(jthread_t tid)
-{
-        return (&tid->data);
-}
+threadData *jthread_get_data(jthread_t tid);
 
 /**
  * Test whether an address is on the stack of the calling thread.
@@ -195,17 +179,7 @@ bool jthread_on_current_stack(void* p);
  *
  * Needed by intrp in order to implement stack overflow checking.
  */
-static inline
-bool jthread_stackcheck(int left)
-{
-	int rc;
-#if defined(STACK_GROWS_UP)
-        rc = jthread_on_current_stack((char*)&rc + left);
-#else
-        rc = jthread_on_current_stack((char*)&rc - left);
-#endif
-	return (rc);
-}
+bool jthread_stackcheck(int left);
 
 /**
  * Extract the range of the stack that's in use.
@@ -225,16 +199,7 @@ bool jthread_extract_stack(jthread_t tid, void** from, unsigned* len);
  *
  * Needed by support.c in order to implement stack overflow checking. 
  */
-static inline
-void* jthread_stacklimit(void)
-{
-  jthread_t nt = jthread_current();
-#if defined(STACK_GROWS_UP)
-  return (void *)((uintp)nt->stackMax - STACKREDZONE);
-#else
-  return (void *)((uintp)nt->stackMin + STACKREDZONE);
-#endif
-}
+void* jthread_stacklimit(void);
 
 /*
  * Get the current stack limit.
@@ -356,31 +321,13 @@ int jthread_get_status (jthread_t thread);
  */
 void jthread_set_blocking (int fd, int blocking);
 
-static inline void
-jthread_suspend(UNUSED jthread_t jt, UNUSED void *suspender)
-{
-	/* TODO */
-}
+void jthread_suspend(UNUSED jthread_t jt, UNUSED void *suspender);
 
-static inline void
-jthread_resume(UNUSED jthread_t jt, UNUSED void *suspender)
-{
-	/* TODO */
-}
+void jthread_resume(UNUSED jthread_t jt, UNUSED void *suspender);
 
-static inline jthread_t
-jthread_from_data(UNUSED threadData *td, UNUSED void *suspender)
-{
-	/* TODO */
-	return NULL;
-}
+jthread_t jthread_from_data(UNUSED threadData *td, UNUSED void *suspender);
 
-static inline
-jlong jthread_get_usage(UNUSED jthread_t jt)
-{
-	/* TODO */
-	return 0;
-}
+jlong jthread_get_usage(UNUSED jthread_t jt);
 
 int jthread_is_interrupted(jthread_t jt);
 
